<resources>
    <string name="app_name">Messenger</string>
    <string name="your_email">Your email</string>
    <string name="your_password">Your password</string>
    <string name="your_name">Your name</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="logo">logo</string>
    <string name="confirm_password">Confirm password</string>
    <string name="message_text">Message text</string>
    <string name="sign_out">Sign out</string>
    <string name="password_mismatch">Password mismatch</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="small_password">Small password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="no_name">No name</string>
    <string name="select_an_image">Select an image</string>
    <string name="chat_with">Chat with</string>
</resources>